# mxf-reader

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/mxf_reader/: __main__.py  database.json
tests/assets/: 2D.mxf  3D.mxf  HFR_2D_120FPS.mxf  HFR_2D_60FPS.mxf  HFR_3D.mxf  audio-32bits.mxf  audio.mxf  broken.mxf  encrypted-key-00000000000000000000000000000000-plaintextoffset.mxf  encrypted-key-00000000000000000000000000000000.mxf  subtitles.images.mxf  subtitles_v9.mxf
