[project]
name = "mxf-reader"
version = "0.1.0"
description = "MXF Reader"
authors = [{name="BGI", email="mxf-reader@sherpadown.net"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"cryptography",
	"lxml",
	"jpylyzer==2.1.0",   # boxValidation has been changed in future versions
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
